[gd_scene load_steps=7 format=3 uid="uid://dfnn6pqf1u4mt"]

[ext_resource type="Script" path="res://anemona.gd" id="1_0uxfb"]
[ext_resource type="PackedScene" uid="uid://ds3tfy2ud3ltp" path="res://bullet.tscn" id="2_fbc1h"]
[ext_resource type="Texture2D" uid="uid://dc7rg6156dv8y" path="res://placeholders/anemona.png" id="2_xvre1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ipdeh"]
radius = 10.0499

[sub_resource type="RectangleShape2D" id="RectangleShape2D_upe2y"]
size = Vector2(24, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_v7hbc"]

[node name="Anemona" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_0uxfb")
bullet_scene = ExtResource("2_fbc1h")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_xvre1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_ipdeh")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_upe2y")
debug_color = Color(0.893693, 0.23255, 0.560983, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_v7hbc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
